--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>PDT NC Epsilon App</title>
+    <script src="https://apis.google.com/js/client.js"></script>
   </head>
   <body>
     <noscript>
